fix mobile essential cards space

--- a/dev.html
+++ b/dev.html
@@ -493,7 +493,7 @@
     /* Réorganisation visuelle des blocs via l'ordre Flexbox */
     #situation { order: 0; }
     #role { order: 1; }
-    #expertise { order: 2; }
+    #approche { order: 2; }
     #solutions { order: 3; }
     #audit { order: 4; }
     #budgets { order: 5; }
@@ -901,13 +901,13 @@
           <p>Traduire, sécuriser et construire durablement</p>
         </a>
 
-        <a href="#expertise" class="toc-card highlight" data-scrolllink data-magnet="20" data-rotate="4">
-          <h3>Expertise&nbsp;&amp;&nbsp;Approche</h3>
+        <a href="#approche" class="toc-card highlight" data-scrolllink data-magnet="20" data-rotate="4">
+          <h3>Approche</h3>
           <p>Une écoute active au service du numérique</p>
         </a>
         
         <a href="#audit" class="toc-card highlight" data-scrolllink data-magnet="20" data-rotate="4">
-          <h3>Audit&nbsp;&amp;&nbsp;Cadrage</h3>
+          <h3>Audit</h3>
           <p>Clarifier votre besoin avant d’investir</p>
         </a>
 
@@ -917,7 +917,7 @@
         </a>
 
         <a href="#budgets" class="toc-card highlight" data-scrolllink data-magnet="20" data-rotate="4">
-          <h3>Budgets&nbsp;&amp;&nbsp;TJM</h3>
+          <h3>Budgets</h3>
           <p>Des repères clairs et transparents</p>
         </a>
       </div>
@@ -1003,16 +1003,16 @@
         </div>
       </article>
 
-      <!-- Expertise & approche -->
-      <article class="block feature-block" id="expertise">
+      <!-- Approche -->
+      <article class="block feature-block" id="approche">
         <div class="block-header">
-          <!-- Icône animée pour Expertise & approche (ampoule) -->
+          <!-- Icône animée pour Approche (ampoule) -->
           <div class="block-icon">
             <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.761-1.77a2 2 0 0 0-.453-.618A5.98 5.98 0 0 1 2 6m6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1"/>
             </svg>
           </div>
-          <div class="block-title">Expertise &amp; <span>approche</span></div>
+          <div class="block-title">Mon<span>Approche</span></div>
           <div class="block-underline"></div>
         </div>
     
