--- a/dev.html
+++ b/dev.html
@@ -11,7 +11,7 @@
 
   <!-- JavaScript existant -->
   <script defer src="main.js"></script>
-  
+
   <style>
     :root{
       --bg:#020617;
@@ -158,6 +158,8 @@
       color:var(--muted);
     }
     .hero-meta strong{ color:var(--text); font-weight:600; }
+
+    strong { color:var(--yellow); }
 
     /* Sommaire - grilles + cartes */
     .toc-grid{
