--- a/dev.html
+++ b/dev.html
@@ -620,64 +620,86 @@
       /* Mobile : sticky bar en bas (fixe) + visible quand .show est présent */
       .sticky-nav {
         position: fixed;
-        top: auto;
-        bottom: calc(env(safe-area-inset-bottom, 0px) + 12px);
         left: 50%;
         transform: translateX(-50%);
+        bottom: calc(0.9rem + env(safe-area-inset-bottom));
+        top: auto;
 
-        width: calc(100% - 1.2rem);
-        max-width: 520px;
-        /* ajuste si tu veux plus large */
-        z-index: 60;
-
-        /* petit effet "barre" plus clean sur mobile */
-        border-radius: 999px;
-        padding: 0.65rem 0.85rem;
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-      }
-
-      /* confort tactile : zones cliquables plus grandes */
-      .sticky-nav a {
+        width: min(560px, calc(100% - 1.4rem));
         padding: 0.55rem 0.65rem;
         border-radius: 999px;
+
+        display: none;
+        /* reste piloté par .show */
+        align-items: center;
+        gap: 0.55rem;
+
+        background: rgba(5, 8, 22, 0.72);
+        border: 1px solid rgba(148, 163, 184, 0.28);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+
+        box-shadow:
+          0 18px 45px rgba(0, 0, 0, 0.72),
+          0 0 14px rgba(236, 72, 153, 0.18),
+          0 0 10px rgba(247, 198, 0, 0.10);
+        z-index: 999;
+      }
+
+      .sticky-nav.show {
+        display: flex;
+      }
+
+      /* boutons parfaitement symétriques */
+      .sticky-nav .nav-btn {
+        width: 44px;
+        min-width: 44px;
+        height: 44px;
+        padding: 0;
+        border-radius: 999px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
         text-decoration: none;
+
+        background: rgba(255, 255, 255, 0.03);
+        border: 1px solid rgba(148, 163, 184, 0.28);
         touch-action: manipulation;
       }
 
-      /* Mobile: boutons en icônes */
-      .sticky-nav .nav-label {
-        display: none;
-      }
-
+      /* flèches */
       .sticky-nav .nav-ico {
-        display: inline-flex;
-        font-size: 1.7rem;
+        font-size: 1.65rem;
         line-height: 1;
         color: var(--pink);
       }
 
-      /* Boutons latéraux plus compacts */
-      .sticky-nav .nav-btn {
-        width: 46px;
-        min-width: 46px;
-        height: 46px;
-        padding: 0;
-        /* important: gagne de la place */
-        justify-content: center;
+      /* home SVG */
+      .sticky-nav .nav-home-ico {
+        width: 22px;
+        height: 22px;
+        color: var(--pink);
       }
 
-      /* Centre: on donne le max d’espace au titre */
+      /* titre au centre : prend le max */
       .sticky-nav .current-section {
         flex: 1;
         min-width: 0;
-        /* permet l’ellipsis */
-        font-size: 0.82rem;
-        /* un poil plus petit */
-        padding: 0 0.45rem;
+        text-align: center;
+        font-weight: 650;
+        font-size: 0.86rem;
+        color: #fefce8;
+
+        padding: 0 0.35rem;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+      }
+
+      /* si tu avais des labels texte, on les masque en mobile */
+      .sticky-nav .nav-label,
+      .sticky-nav .nav-text {
+        display: none;
       }
 
       /* Important : évite que le contenu passe sous la barre */
@@ -925,9 +947,11 @@
 
     <!-- Barre de navigation sticky qui apparaît après le sommaire -->
     <div class="sticky-nav" id="stickyNav">
-      <a href="#sommaire" class="nav-btn nav-sommaire" aria-label="Sommaire">
-        <span class="nav-ico" aria-hidden="true">⌂</span>
-        <span class="nav-label">Sommaire</span>
+      <a href="#sommaire" class="nav-btn nav-home" aria-label="Retour au sommaire">
+        <svg class="nav-home-ico" viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M3 10.5L12 3l9 7.5v10a2 2 0 0 1-2 2h-4.5v-6.5a2 2 0 0 0-2-2h-1a2 2 0 0 0-2 2V22H5a2 2 0 0 1-2-2z"
+            fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
       </a>
 
       <a href="#" class="nav-btn prev-section" aria-label="Section précédente">
