fix add </div> sommaire

--- a/dev.html
+++ b/dev.html
@@ -943,6 +943,7 @@
           <h3>Mon Parcours</h3>
           <p>Des années de projets variés</p>
         </a>
+      </div>
     </section>
 
     <!-- Barre de navigation sticky qui apparaît après le sommaire -->
