fix fusion blocks issue

--- a/dev.html
+++ b/dev.html
@@ -779,6 +779,16 @@
         padding: 1.05rem .95rem;
       }
     }
+
+    /* Espace net entre la section d’intro et le sommaire */
+    #situation{
+      margin-bottom: 2.8rem;
+    }
+
+    /* Optionnel : un léger “respir” au-dessus du sommaire */
+    #sommaire{
+      margin-top: 0.2rem; /* ou 0 si tu trouves que c’est trop */
+    }
   </style>
 </head>
 
