fix fusion blocks issue

--- a/dev.html
+++ b/dev.html
@@ -956,7 +956,7 @@
       </div>
     </section>
 
-    <!-- Barre de navigation sticky qui apparaît après le sommaire -->
+    <!-- Barre de navigation -->
     <div class="sticky-nav" id="stickyNav">
       <a href="#sommaire" class="nav-btn nav-home" aria-label="Retour au sommaire">
         <svg class="nav-home-ico" viewBox="0 0 24 24" aria-hidden="true">
