--- a/dev.html
+++ b/dev.html
@@ -11,785 +11,10 @@
   <!-- Style existant -->
   <link rel="stylesheet" href="styles.css">
 
+  <link rel="stylesheet" href="dev.css">
+
   <!-- JavaScript existant -->
   <script defer src="main.js"></script>
-
-  <style>
-    :root {
-      --bg: #020617;
-      --card: #050816;
-      --card-soft: #050818;
-      --border-soft: #1f2937;
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --yellow: #f7c600;
-      --pink: #ec4899;
-      --radius-xl: 26px;
-      --radius-lg: 18px;
-      --radius-full: 999px;
-      --shadow-soft: 0 24px 60px rgba(0, 0, 0, .75);
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", "Segoe UI", sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-    }
-
-    /* Top bar */
-    .top-bar {
-      border-bottom: 1px solid rgba(148, 163, 184, .45);
-      background: var(--bg);
-      position: sticky;
-      top: 0;
-      z-index: 20;
-    }
-
-    .top-bar-inner {
-      max-width: 1040px;
-      margin: 0 auto;
-      padding: .65rem 1.5rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-    }
-
-    .brand {
-      font-weight: 700;
-      letter-spacing: .06em;
-      text-transform: uppercase;
-      font-size: .8rem;
-      color: var(--text);
-      white-space: nowrap;
-    }
-
-    .brand span {
-      color: var(--yellow);
-    }
-
-    a.premium {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      font-weight: 600;
-      text-decoration: none;
-      position: relative;
-      color: var(--pink);
-      font-size: .9rem;
-      white-space: nowrap;
-    }
-
-    a.premium::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: -2px;
-      width: 100%;
-      height: 2px;
-      border-radius: 999px;
-      background: linear-gradient(90deg, var(--pink), var(--yellow));
-      transform-origin: left;
-      transform: scaleX(0);
-      transition: transform .25s ease-out;
-    }
-
-    a.premium:hover::after,
-    a.premium:focus-visible::after {
-      transform: scaleX(1);
-    }
-
-    main {
-      max-width: 1040px;
-      margin: 0 auto;
-      padding: 2.4rem 1.5rem 3.75rem;
-      padding-bottom: calc(3.75rem + 96px);
-    }
-
-    /* Hero */
-    header.hero {
-      margin-bottom: 2.75rem;
-      padding: 2.4rem 2.1rem 2.3rem;
-      border-radius: var(--radius-xl);
-      background: var(--card);
-      box-shadow: var(--shadow-soft);
-      border: 1px solid rgba(148, 163, 184, .45);
-      position: relative;
-      overflow: hidden;
-    }
-
-    .hero-inner {
-      position: relative;
-      z-index: 1;
-      display: grid;
-      gap: 1.65rem;
-    }
-
-    .badge {
-      display: inline-flex;
-      align-items: center;
-      gap: .45rem;
-      padding: .25rem .75rem .3rem;
-      border-radius: 999px;
-      font-size: .8rem;
-      letter-spacing: .12em;
-      text-transform: uppercase;
-      background: var(--bg);
-      color: var(--muted);
-      border: 1px solid rgba(148, 163, 184, .7);
-    }
-
-    .badge-dot {
-      width: 7px;
-      height: 7px;
-      border-radius: 999px;
-      background: radial-gradient(circle at 30% 0%, var(--yellow), var(--pink));
-      box-shadow: 0 0 10px rgba(248, 250, 252, .6);
-    }
-
-    h1 {
-      font-size: clamp(2.2rem, 3.2vw, 2.8rem);
-      line-height: 1.1;
-      font-weight: 800;
-      letter-spacing: -.03em;
-      margin: 1rem 0 .85rem;
-    }
-
-    h1 span.accent {
-      background: linear-gradient(90deg, var(--yellow), var(--pink));
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-    }
-
-    .hero-subtitle {
-      max-width: 700px;
-      color: var(--muted);
-      font-size: .98rem;
-      margin-bottom: .35rem;
-    }
-
-    .hero-meta {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem 1.75rem;
-      margin-top: 1.1rem;
-      font-size: .85rem;
-      color: var(--muted);
-    }
-
-    .hero-meta strong {
-      color: var(--text);
-      font-weight: 600;
-    }
-
-    strong {
-      color: var(--yellow);
-    }
-
-    /* Sommaire - grilles + cartes */
-    .toc-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.2rem;
-      margin-bottom: 1.8rem;
-    }
-
-    .toc-card {
-      position: relative;
-      padding: 1.2rem 1.4rem;
-      border-radius: var(--radius-lg);
-      background: var(--card-soft);
-      border: 1px solid var(--border-soft);
-      box-shadow: 0 12px 28px rgba(0, 0, 0, .65);
-      color: var(--text);
-      text-decoration: none;
-      overflow: hidden;
-      will-change: transform;
-      transition: transform .3s ease, box-shadow .3s ease;
-    }
-
-    .toc-card h3 {
-      margin-bottom: .35rem;
-      font-size: 1.05rem;
-      font-weight: 700;
-      color: #fefce8;
-    }
-
-    .toc-card p {
-      font-size: .85rem;
-      color: var(--muted);
-    }
-
-    .toc-card::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      border-radius: var(--radius-lg);
-      background: linear-gradient(135deg, var(--pink), var(--yellow));
-      opacity: 0;
-      transition: opacity .4s ease;
-      z-index: -1;
-    }
-
-    .toc-card:hover::after,
-    .toc-card:focus-visible::after {
-      opacity: .15;
-    }
-
-    .toc-card:hover,
-    .toc-card:focus-visible {
-      transform: translateY(-4px) rotateX(1deg) rotateY(-1deg);
-      box-shadow: 0 18px 32px rgba(0, 0, 0, .8), 0 0 14px rgba(236, 72, 153, .4), 0 0 10px rgba(247, 198, 0, .3);
-    }
-
-    .toc-card.active {
-      border-color: var(--pink);
-      box-shadow: 0 0 0 1px var(--pink), 0 0 14px rgba(236, 72, 153, .6), 0 0 10px rgba(247, 198, 0, .45);
-    }
-
-    .toc-card.highlight {
-      border-color: var(--pink);
-      box-shadow: 0 0 0 1px var(--pink), 0 0 12px rgba(236, 72, 153, .5), 0 0 8px rgba(247, 198, 0, .4);
-    }
-
-    /* Titres sommaire */
-    .toc-heading-essential,
-    .toc-heading-full {
-      font-size: 1rem;
-      font-weight: 700;
-      margin-bottom: .6rem;
-      color: #fefce8;
-    }
-
-    .toc-note {
-      margin-top: .4rem;
-      margin-bottom: 1.4rem;
-      font-size: .85rem;
-      color: var(--muted);
-    }
-
-    .toc-heading-full {
-      margin-top: 5rem;
-      margin-bottom: .8rem;
-    }
-
-    /* Cartes essentielles : effet dé sur desktop (3 colonnes) */
-    .essential-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 1.2rem;
-      margin-bottom: 6rem;
-      padding-bottom: 1rem;
-    }
-
-    .essential-grid>a:nth-child(1) {
-      grid-row: 1;
-      grid-column: 1;
-    }
-
-    .essential-grid>a:nth-child(2) {
-      grid-row: 1;
-      grid-column: 3;
-    }
-
-    .essential-grid>a:nth-child(3) {
-      grid-row: 2;
-      grid-column: 2;
-    }
-
-    .essential-grid>a:nth-child(4) {
-      grid-row: 3;
-      grid-column: 1;
-    }
-
-    .essential-grid>a:nth-child(5) {
-      grid-row: 3;
-      grid-column: 3;
-    }
-
-    .essential-grid>a {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      min-height: 180px;
-    }
-
-    /* Sommaire complet : 3 colonnes sur desktop */
-    .full-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: auto;
-      gap: 1.2rem;
-      width: 100%;
-    }
-
-    .full-grid>a {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      min-height: 160px;
-    }
-
-    /* Sections */
-    .grid {
-      display: flex;
-      flex-direction: column;
-      gap: 1.4rem;
-    }
-
-    .block {
-      border-radius: var(--radius-lg);
-      background: var(--card-soft);
-      border: 1px solid var(--border-soft);
-      box-shadow: 0 18px 45px rgba(0, 0, 0, .85);
-      padding: 1.6rem 1.75rem 1.75rem;
-      display: grid;
-      grid-template-columns: auto minmax(0, 1fr);
-      column-gap: 1rem;
-      row-gap: .5rem;
-      scroll-margin-top: 80px;
-    }
-
-    .block-header {
-      display: flex;
-      flex-direction: column;
-      gap: .45rem;
-      margin-right: .5rem;
-    }
-
-    .block-icon {
-      width: 40px;
-      height: 40px;
-      color: var(--pink);
-      flex-shrink: 0;
-    }
-
-    .block-icon svg {
-      width: 100%;
-      height: 100%;
-      stroke: currentColor;
-      fill: none;
-      stroke-width: 1.5;
-      padding: 4px;
-      box-sizing: border-box;
-    }
-
-    .block-icon path {
-      stroke-dasharray: 300;
-      stroke-dashoffset: 300;
-    }
-
-    .block-title {
-      font-weight: 650;
-      font-size: 1.02rem;
-    }
-
-    .block-title span {
-      color: var(--yellow);
-    }
-
-    .block-body {
-      font-size: .96rem;
-      color: var(--text);
-    }
-
-    .block-body p+p {
-      margin-top: .65rem;
-    }
-
-    .block-body ul {
-      list-style: none;
-      margin-top: .4rem;
-      padding-left: 0;
-    }
-
-    .block-body li {
-      position: relative;
-      padding-left: 1.2rem;
-      margin-top: .25rem;
-      color: var(--text);
-    }
-
-    .block-body li::before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: .7em;
-      width: 7px;
-      height: 7px;
-      border-radius: 999px;
-      background: linear-gradient(135deg, var(--yellow), var(--pink));
-      box-shadow: 0 0 7px rgba(248, 250, 252, .6);
-    }
-
-    .block-underline {
-      width: 80px;
-      height: 2px;
-      margin-top: 4px;
-      background: linear-gradient(90deg, var(--yellow), var(--pink));
-      border-radius: 2px;
-      transform-origin: left;
-      transform: scaleX(0);
-    }
-
-    /* Sticky nav (tous écrans) : barre en bas */
-    .sticky-nav {
-      position: fixed;
-      left: 50%;
-      transform: translateX(-50%);
-      top: auto;
-      bottom: calc(env(safe-area-inset-bottom, 0px) + 12px);
-
-      width: min(640px, calc(100% - 1.4rem));
-      display: none;
-      /* reste cachée tant qu'on n'a pas .show */
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-
-      background: rgba(5, 8, 22, 0.72);
-      border: 1px solid rgba(148, 163, 184, 0.35);
-      box-shadow: 0 18px 45px rgba(0, 0, 0, 0.72);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-
-      padding: 0.65rem 0.9rem;
-      border-radius: 999px;
-      z-index: 60;
-    }
-
-    .sticky-nav.show {
-      display: flex;
-    }
-
-    .sticky-nav a {
-      color: var(--pink);
-      font-size: 0.85rem;
-      text-decoration: none;
-      white-space: nowrap;
-      padding: 0.55rem 0.65rem;
-      /* zone tap confortable */
-      border-radius: 999px;
-      touch-action: manipulation;
-    }
-
-    .sticky-nav a:hover {
-      text-decoration: underline;
-    }
-
-    .sticky-nav .current-section {
-      flex: 1;
-      text-align: center;
-      font-weight: 600;
-      color: #fefce8;
-      padding: 0 0.5rem;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-
-    /* Hero visual (poignée de main) */
-    .hero-visual {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 2rem;
-    }
-
-    .hero-visual svg {
-      width: 100%;
-      max-width: 480px;
-      height: auto;
-      opacity: 0;
-    }
-
-    .handshake-labels {
-      position: absolute;
-      bottom: -1.6rem;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      gap: .75rem;
-      opacity: 0;
-    }
-
-    .handshake-label {
-      padding: .3rem .6rem;
-      border-radius: var(--radius-full);
-      font-size: .75rem;
-      letter-spacing: .05em;
-      text-transform: uppercase;
-      background: rgba(255, 255, 255, .05);
-      border: 1px solid rgba(248, 250, 252, .25);
-      color: var(--muted);
-      backdrop-filter: blur(6px);
-    }
-
-    /* CTA */
-    @keyframes cta-pulse {
-
-      0%,
-      100% {
-        transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(236, 72, 153, .4);
-      }
-
-      50% {
-        transform: scale(1.05);
-        box-shadow: 0 0 20px 6px rgba(236, 72, 153, .35);
-      }
-    }
-
-    a.cta-primary {
-      display: inline-block;
-      padding: .8rem 1.4rem;
-      border-radius: 999px;
-      background: linear-gradient(135deg, var(--pink), var(--yellow));
-      color: #111;
-      font-weight: 700;
-      text-decoration: none;
-      will-change: transform;
-      transition: transform .2s ease;
-      animation: cta-pulse 4s ease-in-out infinite;
-      margin-top: 1.2rem;
-      margin-bottom: 1.2rem;
-    }
-
-    a.cta-primary:hover {
-      transform: translateY(-2px);
-    }
-
-    a.cta-primary:focus-visible {
-      outline: 2px solid var(--pink);
-      outline-offset: 2px;
-    }
-
-    /* Responsive */
-    @media (max-width: 720px) {
-
-      /* Top bar sur une ligne */
-      .top-bar-inner {
-        padding: 0.6rem 1.1rem;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        gap: .75rem;
-      }
-
-      .brand {
-        font-size: .76rem;
-      }
-
-      a.premium {
-        font-size: .86rem;
-      }
-
-      /* Layout */
-      main {
-        padding: 2.1rem .75rem 2.8rem;
-      }
-
-      header.hero {
-        padding: 1.9rem 1.4rem 1.8rem;
-      }
-
-      .block {
-        padding: 1.35rem 1.25rem 1.45rem;
-        grid-template-columns: minmax(0, 1fr);
-      }
-
-      .block-header {
-        flex-direction: row;
-        align-items: center;
-        margin-bottom: .4rem;
-      }
-
-      /* Mobile : sticky bar en bas (fixe) + visible quand .show est présent */
-      .sticky-nav {
-        position: fixed;
-        left: 50%;
-        transform: translateX(-50%);
-        bottom: calc(0.9rem + env(safe-area-inset-bottom));
-        top: auto;
-
-        width: min(560px, calc(100% - 1.4rem));
-        padding: 0.55rem 0.65rem;
-        border-radius: 999px;
-
-        display: none;
-        /* reste piloté par .show */
-        align-items: center;
-        gap: 0.55rem;
-
-        background: rgba(5, 8, 22, 0.72);
-        border: 1px solid rgba(148, 163, 184, 0.28);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-
-        box-shadow:
-          0 18px 45px rgba(0, 0, 0, 0.72),
-          0 0 14px rgba(236, 72, 153, 0.18),
-          0 0 10px rgba(247, 198, 0, 0.10);
-        z-index: 999;
-      }
-
-      .sticky-nav.show {
-        display: flex;
-      }
-
-      /* boutons parfaitement symétriques */
-      .sticky-nav .nav-btn {
-        width: 44px;
-        min-width: 44px;
-        height: 44px;
-        padding: 0;
-        border-radius: 999px;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        text-decoration: none;
-
-        background: rgba(255, 255, 255, 0.03);
-        border: 1px solid rgba(148, 163, 184, 0.28);
-        touch-action: manipulation;
-      }
-
-      /* flèches */
-      .sticky-nav .nav-ico {
-        font-size: 1.65rem;
-        line-height: 1;
-        color: var(--pink);
-      }
-
-      /* home SVG */
-      .sticky-nav .nav-home-ico {
-        width: 22px;
-        height: 22px;
-        color: var(--pink);
-      }
-
-      /* titre au centre : prend le max */
-      .sticky-nav .current-section {
-        flex: 1;
-        min-width: 0;
-        text-align: center;
-        font-weight: 650;
-        font-size: 0.86rem;
-        color: #fefce8;
-
-        padding: 0 0.35rem;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-
-      /* si tu avais des labels texte, on les masque en mobile */
-      .sticky-nav .nav-label,
-      .sticky-nav .nav-text {
-        display: none;
-      }
-
-      /* Important : évite que le contenu passe sous la barre */
-      main {
-        padding-bottom: 7.2rem;
-        /* ajuste si besoin */
-      }
-
-      /* Cartes essentielles : "dé élargi" => 4 colonnes + chaque carte span 2 colonnes */
-      .essential-grid {
-        grid-template-columns: repeat(4, minmax(0, 1fr));
-        gap: .9rem;
-        margin-left: -.25rem;
-        margin-right: -.25rem;
-      }
-
-      .essential-grid>a:nth-child(1) {
-        grid-row: 1;
-        grid-column: 1 / span 2;
-      }
-
-      .essential-grid>a:nth-child(2) {
-        grid-row: 1;
-        grid-column: 3 / span 2;
-      }
-
-      .essential-grid>a:nth-child(3) {
-        grid-row: 2;
-        grid-column: 2 / span 2;
-      }
-
-      .essential-grid>a:nth-child(4) {
-        grid-row: 3;
-        grid-column: 1 / span 2;
-      }
-
-      .essential-grid>a:nth-child(5) {
-        grid-row: 3;
-        grid-column: 3 / span 2;
-      }
-
-      .essential-grid>a {
-        min-height: 200px;
-        padding: 1.05rem .95rem;
-      }
-
-      /* Pas de tirets / césures sur iOS */
-      .essential-grid>a h3,
-      .essential-grid>a p,
-      .full-grid>a h3,
-      .full-grid>a p {
-        hyphens: none;
-        -webkit-hyphens: none;
-        -ms-hyphens: none;
-        word-break: normal;
-        overflow-wrap: break-word;
-      }
-
-      .essential-grid>a h3 {
-        font-size: .98rem;
-        line-height: 1.15;
-      }
-
-      .essential-grid>a p {
-        font-size: .84rem;
-        line-height: 1.32;
-      }
-
-      /* Sommaire complet : 2 colonnes sur mobile */
-      .full-grid {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        gap: .85rem;
-      }
-
-      .full-grid>a {
-        min-height: 190px;
-        padding: 1.05rem .95rem;
-      }
-    }
-
-    /* Espace net entre la section d’intro et le sommaire */
-    #situation{
-      margin-bottom: 2.8rem;
-    }
-
-    /* Optionnel : un léger “respir” au-dessus du sommaire */
-    #sommaire{
-      margin-top: 0.2rem; /* ou 0 si tu trouves que c’est trop */
-    }
-  </style>
 </head>
 
 <body>
