split dev.js / dev.css

--- a/dev.html
+++ b/dev.html
@@ -9,12 +9,12 @@
     content="Présentation complète de l’offre de développement et d’accompagnement numérique proposée par Informatique Cerdagne. Découvrez la méthode, l’audit à 150 €, les services, la transparence des budgets et l’expertise derrière chaque projet." />
 
   <!-- Style existant -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 
-  <link rel="stylesheet" href="dev.css">
+  <link rel="stylesheet" href="css/dev.css">
 
   <!-- JavaScript existant -->
-  <script defer src="main.js"></script>
+  <script defer src="js/main.js"></script>
 </head>
 
 <body>
@@ -633,7 +633,7 @@
   <!-- Chargement de GSAP -->
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-  <script defer src="dev.js"></script>
+  <script defer src="js/dev.js"></script>
 </body>
 
 </html>
