split dev.js / dev.css

--- a/dev.html
+++ b/dev.html
@@ -633,7 +633,7 @@
   <!-- Chargement de GSAP -->
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-  <script defer src="js/dev.js"></script>
+  <script src="js/dev.js"></script>
 </body>
 
 </html>
