split dev.js / dev.css

--- a/dev.html
+++ b/dev.html
@@ -5,16 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Offre de développement – Informatique Cerdagne</title>
-  <meta name="description"
-    content="Présentation complète de l’offre de développement et d’accompagnement numérique proposée par Informatique Cerdagne. Découvrez la méthode, l’audit à 150 €, les services, la transparence des budgets et l’expertise derrière chaque projet." />
-
-  <!-- Style existant -->
-  <link rel="stylesheet" href="css/styles.css">
-
+  <meta name="description" content="Présentation complète de l’offre de développement et d’accompagnement numérique proposée par Informatique Cerdagne. Découvrez la méthode, l’audit à 150 €, les services, la transparence des budgets et l’expertise derrière chaque projet." />
   <link rel="stylesheet" href="css/dev.css">
-
-  <!-- JavaScript existant -->
-  <script defer src="js/main.js"></script>
 </head>
 
 <body>
