--- a/dev.html
+++ b/dev.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Offre de développement – Informatique Cerdagne</title>
-  <meta name="description" content="Présentation complète de l’offre de développement et d’accompagnement numérique proposée par Informatique Cerdagne. Découvrez la méthode, l’audit à 150 €, les services, la transparence des budgets et l’expertise derrière chaque projet." />
+  <meta name="description"
+    content="Présentation complète de l’offre de développement et d’accompagnement numérique proposée par Informatique Cerdagne. Découvrez la méthode, l’audit à 150 €, les services, la transparence des budgets et l’expertise derrière chaque projet." />
   <link rel="stylesheet" href="css/dev.css">
 </head>
 
@@ -356,8 +357,9 @@
 
           <!-- Appel à l'action pour réserver l'audit : placé en bas de la section pour conclure la lecture -->
           <p class="cta-call">
-            <a href="mailto:informatiquecerdagne@gmail.com?subject=Réservation%20audit%20150%20€%20–%20[Nom/Entreprise]&body=Bonjour%20Rémy,%0A%0AMon%20activité :%20%0AMes%20blocages :%20%0AMes%20objectifs :%20%0AVos%20contraintes :%20%0A%0AMerci."
-              class="cta-primary" data-magnet="20" data-rotate="4">RESERVER</a>
+            <a id="reserve-btn" href="mailto:informatiquecerdagne@gmail.com" class="cta-primary" aria-haspopup="dialog">
+              RESERVER
+            </a>
           </p>
         </div>
       </article>
@@ -626,6 +628,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script src="js/dev.js"></script>
+  <script defer src="js/reserve-flip-premium.js"></script>
 </body>
 
 </html>
