modal flip loader fix

--- a/dev.html
+++ b/dev.html
@@ -382,8 +382,8 @@
           <p class="micro-copy">Des repères clairs pour savoir où vous allez.</p>
           <p>Chaque projet est unique, mais pour vous donner des repères :</p>
           <ul>
-            <li><strong>Site vitrine</strong> : à partir de 2 000 €.</li>
-            <li><strong>Refonte de site</strong> : à partir de 2 500 €.</li>
+            <li><strong>Site vitrine sur-mesure</strong> : à partir de 2 500 €.</li>
+            <li><strong>Refonte de site</strong> : à partir de 3 000 €.</li>
             <li><strong>E‑commerce</strong> : à partir de 4 000 €.</li>
             <li><strong>Applications / automatisation</strong> : sur cadrage.</li>
           </ul>
