style tech-stack

--- a/dev.html
+++ b/dev.html
@@ -615,9 +615,9 @@
           <p>Ces projets m’ont confronté à des réalités très variées : grand public, B2B, institutions, santé,
             industrie, logistique, internationalisation, performance, sécurité, expérience utilisateur, contraintes
             réglementaires.</p>
-          <p>Environnements techniques : Linux, Docker, Varnish, Git, Solr, Symfony, Doctrine, SQL,
-            eZ Publish / eZ Platform, HTML/CSS, PHP, JavaScript, Wordpress, ainsi que les méthodologies Agile / Scrum,
-            avec des outils de pilotage comme JIRA.</p>
+          <p class="tech-stack">Environnements techniques : Linux, Docker, Varnish, Git, Solr, Symfony, Doctrine, SQL,
+            eZ Publish / eZ Platform, HTML/CSS, PHP, JavaScript, Wordpress, ainsi que les méthodologies Agile / Scrum,
+            avec des outils de pilotage comme JIRA.</p>
         </div>
       </article>
 
