htaccess dev.informatique-cerdagne.fr

--- a/dev/index.html
+++ b/dev/index.html
@@ -8,6 +8,7 @@
   <meta name="description"
     content="Présentation complète de l’offre de développement et d’accompagnement numérique proposée par Informatique Cerdagne. Découvrez la méthode, l’audit à 150 €, les services, la transparence des budgets et l’expertise derrière chaque projet." />
   <link rel="stylesheet" href="css/dev.css">
+  <link rel="canonical" href="https://dev.informatique-cerdagne.fr/">
 </head>
 
 <body>
