retour au site principal url

--- a/dev/index.html
+++ b/dev/index.html
@@ -18,7 +18,7 @@
       <div class="brand">
         INFORMATIQUE <span>CERDAGNE</span>
       </div>
-      <a href="/" class="premium">Retour au site principal</a>
+      <a href="https://www.informatique-cerdagne.fr" class="premium">Retour au site principal</a>
     </div>
   </header>
 
