change profile image

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         </div>
 
         <div class="card profile" data-magnet>
-          <img src="img/profile.jpg" alt="Rémy Roger – Informatique Cerdagne" loading="lazy" />
+          <img src="img/profile.png" alt="Rémy Roger – Informatique Cerdagne" loading="lazy" />
           <div class="profile__txt">
             <h3>Rémy ROGER</h3>
             <p>Un amoureux de la relation client, à votre service en Cerdagne.</p>
