reserve-modal call fix

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- CSS -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="../ccs/reserve-modal.css">
+  <link rel="stylesheet" href="../css/reserve-modal.css">
 
   <!-- Libs: GSAP (+ plugins) -->
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
@@ -214,7 +214,7 @@
       <a data-scrolllink href="#prestations" data-magnet>Prestations</a>
       <a data-scrolllink href="#expertise" data-magnet>Expertise</a>
       <a data-scrolllink href="#avis" data-magnet>Avis</a>
-      <a href="" class="btn btn-primary btn-magnet" data-magnet data-reserve-trigger>Contact</a>
+      <a href="#" class="btn btn-primary btn-magnet" data-magnet data-reserve-trigger>Contact</a>
     </div>
 
     <!-- Mobile: bouton -->
@@ -284,7 +284,7 @@
             <span class="mnav__chev">›</span>
           </a>
 
-          <a href="" class="mnav__item mnav__item--cta" data-magnet>
+          <a href="#" class="mnav__item mnav__item--cta" data-magnet>
             <span class="mnav__icon">
               <svg viewBox="0 0 64 64" aria-hidden="true">
                 <use href="#ic-phone" />
@@ -389,7 +389,7 @@
         </p>
 
         <div class="cta">
-          <a href="" class="btn btn-primary btn-magnet" data-magnet data-reserve-trigger>
+          <a href="#" class="btn btn-primary btn-magnet" data-magnet data-reserve-trigger>
             Demander un devis
           </a>
           <a data-scroll-link href="#prestations" class="btn btn-ghost btn-magnet" data-magnet>
@@ -563,7 +563,7 @@
           <div class="profile__txt">
             <h3>Rémy ROGER</h3>
             <p>Un amoureux de la relation client, à votre service en Cerdagne.</p>
-            <a href="" class="btn btn-primary small btn-magnet" data-reserve-trigger>Me contacter</a>
+            <a href="#" class="btn btn-primary small btn-magnet" data-reserve-trigger>Me contacter</a>
           </div>
         </div>
       </div>
