--- a/dev/index.html
+++ b/dev/index.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="Présentation complète de l’offre de développement et d’accompagnement numérique proposée par Informatique Cerdagne. Découvrez la méthode, l’audit à 150 €, les services, la transparence des budgets et l’expertise derrière chaque projet." />
   <link rel="stylesheet" href="css/dev.css">
-  <link rel="stylesheet" href="../ccs/reserve-modal.css">
+  <link rel="stylesheet" href="https://www.informatique-cerdagne.fr/css/reserve-modal.css">
   <link rel="canonical" href="https://dev.informatique-cerdagne.fr/">
 </head>
 
@@ -630,7 +630,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script src="js/dev.js"></script>
-  <script defer src="../js/reserve-modal.js"></script>
+  <script defer src="https://www.informatique-cerdagne.fr/js/reserve-modal.js"></script>
 </body>
 
 </html>
