refonte mobile menu

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <aside class="mnav__sheet" role="dialog" aria-modal="true" aria-label="Menu">
         <header class="mnav__top" aria-label="En-tête du menu">
           <div class="mnav__top-left">
-            <span class="mnav__dot" aria-hidden="true"></span>
+            <img src="img/logo-cerdagne.png" alt="" class="mnav__brand" aria-hidden="true">
             <span class="mnav__title">Menu</span>
           </div>
 
